--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-react-app": "^7.0.1",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
+    "html-react-parser": "^3.0.14",
     "jquery": "^3.6.4",
     "particles.js": "^2.0.0",
     "react": "^18.2.0",
