--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
     "sass": "^1.59.2",
+    "twitter-api-sdk": "^1.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
