--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.5.0",
     "sass": "^1.59.2",
     "twitter-api-sdk": "^1.2.1",
+    "twitter-api-v2": "^1.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "volta": {
+    "node": "18.12.1"
   }
 }
